fixing gap between card elements, and fixed h2 styling

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ button {
   padding: 2.4rem 4rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
   border-radius: 2rem;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 }
@@ -51,9 +51,10 @@ input {
   padding: 1rem;
   border: 1px solid #ccc;
 }
-h1 {
+h2 {
   font-weight: 700;
   font-size: 3.2rem;
+  text-align: center;
 }
 
 .calculate {
